<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This Source Code Form is subject to the terms of the Mozilla Public
  ~ License, v. 2.0. If a copy of the MPL was not distributed with this
  ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
         child.project.url.inherit.append.path="false">
    <modelVersion>4.0.0</modelVersion>

    <!-- coordinates -->
    <groupId>es.wakamiti</groupId>
    <artifactId>wakamiti-github-actions</artifactId>
    <version>0.0.1</version>
    <name>Test Github Actions</name>
    <description>Dummy project to test wakamiti GitHub Actions</description>
    <url>https://github.com/wakamiti/wakamiti-github-actions</url>

    <licenses>
        <license>
            <name>MPL-2.0</name>
            <url>https://www.mozilla.org/en-US/MPL/2.0/</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/wakamiti/wakamiti-github-actions.git</connection>
        <developerConnection>scm:git:git@github.com:wakamiti/wakamiti-github-actions.git</developerConnection>
        <url>git://github.com/wakamiti/wakamiti-github-actions.git</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>${env.PACKAGES_URL}</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <!-- encoding -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- build versions -->
        <java.version>25</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <jri.modules>java.base</jri.modules>
        <jri.output>${project.basedir}${file.separator}.jri</jri.output>
    </properties>


    <profiles>
        <profile>
            <id>jlink</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>3.6.1</version>
                        <executions>
                            <execution>
                                <id>flatten-jri-modules</id>
                                <phase>initialize</phase>
                                <goals>
                                    <goal>regex-property</goal>
                                </goals>
                                <configuration>
                                    <name>jri.modules</name>
                                    <value>${jri.modules}</value>
                                    <regex>[\r\n\t ]+</regex>
                                    <replacement></replacement>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.6.3</version>
                        <executions>
                            <execution>
                                <id>jlink</id>
                                <goals><goal>exec</goal></goals>
                                <configuration>
                                    <executable>${java.home}${file.separator}bin${file.separator}jlink</executable>
                                    <arguments>
                                        <argument>--strip-debug</argument>
                                        <argument>--no-header-files</argument>
                                        <argument>--no-man-pages</argument>
                                        <argument>--compress=2</argument>
                                        <argument>--add-modules</argument>
                                        <argument>${jri.modules.arg}</argument>
                                        <argument>--output</argument>
                                        <argument>${jri.output}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>release</id>

            <build>
                <plugins>
                    <!-- This plugin disables the deployment for artifacts that already exists -->
                    <plugin>
                        <groupId>org.honton.chas</groupId>
                        <artifactId>exists-maven-plugin</artifactId>
                        <version>0.14.0</version>
                        <executions>
                            <execution>
                                <phase>verify</phase>
                                <goals>
                                    <goal>remote</goal>
                                </goals>
                                <configuration>
                                    <repository>https://repo.maven.apache.org/maven2/</repository>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-enforcer-plugin</artifactId>
                        <version>3.5.0</version>
                        <executions>
                            <execution>
                                <id>enforce-no-snapshots</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>enforce</goal>
                                </goals>
                                <configuration>
                                    <rules>
                                        <requireReleaseDeps>
                                            <message>No Snapshots Allowed!</message>
                                        </requireReleaseDeps>
                                    </rules>
                                    <fail>true</fail>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- Generar fuentes y Javadoc -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <phase>install</phase>
                                <id>attach-sources</id>
                                <goals><goal>jar-no-fork</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.10.1</version>
                        <executions>
                            <execution>
                                <phase>install</phase>
                                <id>attach-javadocs</id>
                                <goals><goal>jar</goal></goals>
                            </execution>
                        </executions>
                    </plugin>

                    <!-- Firmar artefactos -->
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.4</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>install</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.7.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <autoPublish>true</autoPublish>
                            <centralBaseUrl>${env.SONATYPE_URL}</centralBaseUrl> <!-- only for test -->
                        </configuration>
                        <executions>
                            <execution>
                                <phase>deploy</phase>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>